--- a/modules/bigip/as3.tmpl
+++ b/modules/bigip/as3.tmpl
@@ -6,7 +6,7 @@
         "class": "ADC",
         "schemaVersion": "3.0.0",
         "id": "urn:uuid:69c58438-9384-4570-b0c8-a8a7c9c297c1",
-        "label": "consul-nma",
+        "label": "consul-sna",
         "remark": "Simple HTTP Service with Round-Robin Load Balancing",
         ${tenant_name}: {
             "class": "Tenant",
